baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_concrete/baml_tests__compiles__json_to_from_string_concrete__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.User {
  name: string
  age: int
}
function user.deserialize_user(s: string) -> user.User  [expr] {
  {  } baml.json.from_string(s)
}
function user.from_json(j: baml.json.json) -> user.User  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.serialize_user(u: user.User) -> string  [expr] {
  {  } baml.json.to_string(u)
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json(), "age": self.age.to_json() }
}
