baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_concrete/baml_tests__compiles__json_to_from_string_concrete__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 15849
---
=== PPIR ===
class user.User {
  name: string
  age: int
}
class user.User$stream {
  name: string | null
  age: int | null
}
function user.deserialize_user(s: string) -> user.User  [expr] {
  {  } baml.json.from_string(s)
}
function user.serialize_user(u: user.User) -> string  [expr] {
  {  } baml.json.to_string(u)
}
