baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_concrete/baml_tests__compiles__json_to_from_string_concrete__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.User {
  name: string
  age: int
}
function user.User.to_json(self: user.User) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "name": self.name.to_json(), "age": self.age.to_json() } : map<string, baml.json.json>
}
function user.User.from_json(j: baml.json.json) -> user.User throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.User
}
function user.serialize_user(u: user.User) -> string throws baml.json.JsonSerializationError {
  { : string
    baml.json.to_string<T>(u) : string
  }
}
function user.deserialize_user(s: string) -> user.User throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  { : user.User
    baml.json.from_string<T>(s) : user.User
  }
}
class user.User$stream {
  name: null | string
  age: null | int
}
