baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_concrete/baml_tests__compiles__json_to_from_string_concrete__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.User.from_json(j: baml.json.json) -> User {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type User
    load_var _2
    call baml.json.from_string
    return
}

function user.User.to_json(self: null) -> baml.json.json {
    load_type User
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}

function user.deserialize_user(s: string) -> User {
    load_type User
    load_var s
    call baml.json.from_string
    return
}

function user.serialize_user(u: User) -> string {
    load_type User
    load_var u
    call baml.json.to_string
    return
}
